--- a/lapidary-render/pyproject.toml
+++ b/lapidary-render/pyproject.toml
@@ -20,12 +20,20 @@ classifiers = [
     "Topic :: Software Development :: Code Generators",
     "Typing :: Typed",
 ]
+keywords = [
+    "OpenAPI",
+    "OpenAPI3",
+    "CodeGen",
+    "Code Generation",
+    "Code Generator",
+    "OpenAPI Tools",
+]
+homepage = "https://lapidary.dev/"
 
 [tool.poetry.dependencies]
 python = "^3.12"
 asyncclick = "^8.1.7.2"
 jsonpatch = "^1.32"
-lapidary = "^0.9.0"
 pybase62 = "^1.0.0"
 pydantic = "^2.5.2"
 python-mimeparse = "^1.6.0"
