--- a/lapidary-render/tests/e2e/init/dummy/pyproject.toml
+++ b/lapidary-render/tests/e2e/init/dummy/pyproject.toml
@@ -14,10 +14,10 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
-lapidary = {path="../../../.."}
+lapidary = {path="../../../../../lapidary"}
 
 [tool.poetry.group.dev.dependencies]
-lapidary-render = "^0.9.0"
+lapidary-render = {path="../../../..", python="^3.12"}
 
 [tool.lapidary]
 document_path = "dummy.yaml"
