--- a/lapidary-render/pyproject.toml
+++ b/lapidary-render/pyproject.toml
@@ -38,7 +38,7 @@ pybase62 = "^1.0.0"
 pydantic = "^2.5.2"
 python-mimeparse = "^1.6.0"
 ruamel-yaml = "^0.18.6"
-rybak = { version = "^0.3.0", extras = ['jinja'] }
+rybak = { version = "^0.4", extras = ['jinja'] }
 
 [tool.poetry.scripts]
 lapidary = "lapidary.render:app"
@@ -46,6 +46,7 @@ lapidary = "lapidary.render:app"
 [tool.poetry.group.dev.dependencies]
 pyjwt = "^2.8.0"
 pytest = "^8.2.0"
+pytest-asyncio = "^0.23.7"
 pytest-httpx = "^0.30.0"
 
 [tool.ruff]
