--- a/lapidary-render/pyproject.toml
+++ b/lapidary-render/pyproject.toml
@@ -7,7 +7,7 @@ authors = ["Raphael Krupinski <rafalkrupinski@users.noreply.github.com>"]
 description = "Python async OpenAPI client library generator"
 license = "AGPL-3.0"
 name = "lapidary-render"
-version = "0.10.0"
+version = "0.10.1"
 packages = [{ include = "lapidary", from = "src" }]
 readme = 'Readme.md'
 repository = 'https://github.com/python-lapidary/lapidary'
@@ -72,7 +72,9 @@ quote-style = "single"
 [tool.mypy]
 mypy_path = "src"
 namespace_packages = true
+ignore_missing_imports = true
 python_version = "3.12"
+packages = ['lapidary.render']
 exclude = [
     "src/lapidary/render/templates/",
     "tests/e2e",
