--- a/lapidary/pyproject.toml
+++ b/lapidary/pyproject.toml
@@ -30,9 +30,9 @@ python-mimeparse = "^1.6.0"
 typing-extensions = { python = "<3.12", version = "^4.9.0" }
 
 [tool.poetry.group.dev.dependencies]
-fastapi = "^0.109.0"
 pytest = ">=7.1,<9.0"
 pytest-asyncio = "^0.23.3"
+starlette = "^0.38.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
