--- a/lapidary/pyproject.toml
+++ b/lapidary/pyproject.toml
@@ -26,7 +26,7 @@ python = "^3.9"
 httpx = {extras = ["http2"], version = "^0.27"}
 httpx-auth = "^0.22"
 pydantic = "^2.5.2"
-python-mimeparse = "^1.6.0"
+python-mimeparse = "2.0.0rc1"
 typing-extensions = { python = "<3.12", version = "^4.9.0" }
 
 [tool.poetry.group.dev.dependencies]
