--- a/lapidary-render/pyproject.toml
+++ b/lapidary-render/pyproject.toml
@@ -37,7 +37,7 @@ httpx = "^0.27.0"
 jsonpatch = "^1.32"
 pybase62 = "^1.0.0"
 pydantic = "^2.5.2"
-python-mimeparse = "^1.6.0"
+python-mimeparse = ">=1.6,<3.0"
 ruamel-yaml = "^0.18.6"
 rybak = { version = "^0.4", extras = ['jinja'] }
 
@@ -47,7 +47,7 @@ lapidary = "lapidary.render:app"
 [tool.poetry.group.dev.dependencies]
 pyjwt = "^2.8.0"
 pytest = "^8.2.0"
-pytest-asyncio = "^0.23.7"
+pytest-asyncio = ">=0.23.7,<0.25.0"
 pytest-httpx = "^0.30.0"
 
 [tool.ruff]
