--- a/lapidary/pyproject.toml
+++ b/lapidary/pyproject.toml
@@ -26,12 +26,12 @@ python = "^3.9"
 httpx = {extras = ["http2"], version = "^0.27"}
 httpx-auth = "^0.22"
 pydantic = "^2.5.2"
-python-mimeparse = "2.0.0rc1"
+python-mimeparse = "2.0.0"
 typing-extensions = { python = "<3.12", version = "^4.9.0" }
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.1,<9.0"
-pytest-asyncio = "^0.23.3"
+pytest-asyncio = ">=0.23.3,<0.25.0"
 starlette = "^0.38.2"
 
 [build-system]
