--- a/lapidary-render/pyproject.toml
+++ b/lapidary-render/pyproject.toml
@@ -40,6 +40,7 @@ pydantic = "^2.5.2"
 python-mimeparse = ">=1.6,<3.0"
 ruamel-yaml = "^0.18.6"
 rybak = { version = "^0.4", extras = ['jinja'] }
+openapi-pydantic = "^0.4.1"
 
 [tool.poetry.scripts]
 lapidary = "lapidary.render:app"
@@ -69,6 +70,9 @@ extend-ignore = [
 
 [tool.ruff.format]
 quote-style = "single"
+
+[tool.ruff.lint.isort]
+combine-as-imports = true
 
 [tool.mypy]
 mypy_path = "src"
