--- a/lapidary-render/pyproject.toml
+++ b/lapidary-render/pyproject.toml
@@ -49,7 +49,7 @@ lapidary = "lapidary.render:app"
 pyjwt = "^2.8.0"
 pytest = "^8.2.0"
 pytest-asyncio = ">=0.23.7,<0.25.0"
-pytest-httpx = "^0.30.0"
+pytest-httpx = ">=0.30,<0.33"
 
 [tool.ruff]
 target-version = "py312"
