--- a/lapidary/pyproject.toml
+++ b/lapidary/pyproject.toml
@@ -32,7 +32,7 @@ typing-extensions = { python = "<3.12", version = "^4.9.0" }
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.1,<9.0"
 pytest-asyncio = ">=0.23.3,<0.25.0"
-starlette = "^0.38.2"
+starlette = ">=0.38.2,<0.40.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
