--- a/lapidary/pyproject.toml
+++ b/lapidary/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "lapidary"
-version = "0.11.0"
+version = "0.12.0"
 description = "Python async OpenAPI client library"
 authors = ["Raphael Krupinski <rafalkrupinski@users.noreply.github.com>"]
 license = "MIT"
@@ -61,6 +61,7 @@ line-length = 140
 [tool.ruff.lint]
 #extend-select = ["E501", "E4", "E7", "E9", "F", "B", 'UP', 'D']
 select = ['F', 'E', 'W', 'C90', 'I', 'UP']
+ignore = ['F842']
 
 [tool.ruff.format]
 quote-style = "single"
