--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Docs for Lapidary"
 authors = ["Raphael Krupinski <rafalkrupinski@users.noreply.github.com>"]
 license = "CC-BY-SA"
 readme = "Readme.md"
+package-mode = false
 
 
 [tool.poetry.dependencies]
@@ -12,7 +13,7 @@ python = '^3.10'
 mkdocs = "^1.6.0"
 mkdocs-material = "^9.5"
 mkdocs-monorepo-plugin = "^1.1.0"
-mkdocstrings = {extras = ["python"], version = "^0.25"}
+mkdocstrings = {extras = ["python"], version = "^0.26.1"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
